# grpc-performance

./: Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
cmds/client/: main.go
cmds/server/: main.go
proto/: echo.pb.go  echo.proto  echo_grpc.pb.go
src/: build.rs  client.rs  server.rs
tools/: tools.go
